--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,49 @@
     transform: rotate(360deg);
   }
 }
+/*---------------------------------------------------------------------------------------------------------------------------------*/
+:root {
+  --primary-white: #fff;
+  --primary-purple: rebeccapurple;
+  --primary-dark: rgb(255, 255, 255, 0)
+}
+
+body {
+  font-family: "Roboto Condensed", sans-serif;
+}
+.logo {
+  width: 16.25rem;
+}
+
+/* NAV LINKS MENU */
+nav a.nav-link {
+  font-weight: 500;
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+}
+
+nav ul li {
+  text-transform: uppercase;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.navbar-nav > li > a {
+  margin-right: 0.075rem;
+  margin-left: 0.075rem;
+  color: var(--primary-white) !important;
+  border-top: .1875rem solid var(--primary-dark);
+}
+
+.navbar-brand {
+  max-width: 17.25rem;
+  padding: 0 !important;
+  height: 4rem !important;
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a:focus {
+  border-top: 0.1875rem solid var(--primary-purple);
+}
+
+.navbar-nav > li > a:hover {
+  border-top: 0.1875rem solid var(--primary-purple);
+}
