--- a/src/App.css
+++ b/src/App.css
@@ -73,9 +73,9 @@ nav ul li {
   max-width: 17.25rem;
   padding: 0 !important;
   height: 4rem !important;
-}
+} 
 
-.navbar-nav > li > a.active, .navbar-nav > li > a:focus {
+.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
   border-top: 0.1875rem solid var(--primary-purple);
 }
 
