--- a/src/App.css
+++ b/src/App.css
@@ -36,11 +36,13 @@
     transform: rotate(360deg);
   }
 }
-/*---------------------------------------------------------------------------------------------------------------------------------*/
+/*-------------------------------------------------NAVBAR--------------------------------------------------------------------------------*/
 :root {
   --primary-white: #fff;
   --primary-purple: rebeccapurple;
-  --primary-dark: rgb(255, 255, 255, 0)
+  --primary-dark: rgb(255, 255, 255, 0);
+  --primary-red: #ef4035;
+  --primary-hover-red: #f33501;
 }
 
 body {
@@ -81,4 +83,49 @@ nav ul li {
 
 .navbar-nav > li > a:hover {
   border-top: 0.1875rem solid var(--primary-purple);
+}
+
+/*-------------------------------------------------HEADER--------------------------------------------------------------------------------*/
+
+.header-wrapper {
+  position: relative;
+  background: url('wall-and-laptop-background.jpg') no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.main-info h1 {
+  color: var(--primary-purple);
+  text-transform: uppercase;
+}
+
+/* ---------- TYPEDTEXT ---------*/
+
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+.btn-main-offer {
+  border: 1px solid var(--primary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: .625rem .75rem .75rem .75rem;
+  color: var(--primary-white);
+  margin: 2rem;
 }
