--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ nav {
 }
 
 body {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto Condensed", sans-serif !important;
 }
 .logo {
   width: 16.25rem;
@@ -165,5 +165,31 @@ nav ul li {
 @media (max-width: 768px) {
   .particles-canvas {
     display: none;
+  }
+}
+
+/* ------------------------ABOUT ME-----------*/
+
+.photo-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-img {
+  width: 16rem;
+  border-radius: 50%;
+  padding: 0.3rem;
+  border: var(--primary-purple);
+}
+
+.about-header {
+  color: var(--primary-purple);
+  text-transform: uppercase;
+}
+
+@media(max-width: 468px){
+  .profile-img{
+    width: 10rem;
   }
 }
