--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@
 :root {
   --primary-white: #fff;
   --primary-purple: rebeccapurple;
-  --primary-dark: rgb(255, 255, 255, 0);
-  /* --primary-purple: #8e10ad; */
+  --primary-dark: rgb(52, 58, 64);
+  --primary-light-grey: #f4f4f4;
   --primary-hover-purple: #9650ac;
 }
 nav {
@@ -192,4 +192,16 @@ nav ul li {
   .profile-img{
     width: 10rem;
   }
+}
+
+/* ------------------------SERVICES-----------*/
+
+.services {
+  text-align: center;
+  padding-bottom: 2rem;
+  background: var(--primary-light-grey);
+}
+
+.services h1 {
+  color: var(--primary-dark)
 }
