--- a/src/App.css
+++ b/src/App.css
@@ -39,10 +39,12 @@
 /*-------------------------------------------------NAVBAR--------------------------------------------------------------------------------*/
 :root {
   --primary-white: #fff;
-  --primary-purple: rebeccapurple;
   --primary-dark: rgb(52, 58, 64);
-  --primary-light-grey: #f4f4f4;
+  --primary-purple: rebeccapurple;
   --primary-hover-purple: #9650ac;
+  --primary-light-grey: #f4f4f4;
+  --primary-grey: lightslategrey;
+  --primary-dark-grey: #666666;
 }
 nav {
   z-index: 2;
@@ -250,4 +252,89 @@ nav ul li {
 }
 .services .box:hover h3 {
   color: var(--primary-white);
+}
+
+/* ------------------------EXPERIENCE-----------*/
+
+.experience{
+  padding: 0.7rem;
+}
+
+.experience-wrapper {
+  position: relative;
+  padding: 3.125rem;
+  overflow: hidden;
+}
+
+.experience h1 {
+  text-transform: uppercase;
+  color: var(--primary-purple);
+}
+
+.experience-wrapper::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  margin-left: -0.0625rem;
+  width: 0.125rem;
+  height: 100%;
+  background: var(--primary-grey);
+  z-index: 1;
+}
+
+.timeline-block {
+  width: calc(50% + 0.5rem);
+  display: flex;
+  justify-content: space-between;
+  clear: both;
+}
+
+.timeline-block-right {
+  float: right;
+}
+.timeline-block-left {
+  float: left;
+  direction: rtl;
+}
+
+.marker {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 0.3125rem solid var(--primary-dark);
+  background: var(--primary-white);
+  margin-top: 0.625rem;
+  z-index: 3;
+}
+
+.timeline-content {
+  width: 95%;
+  padding: 0 0.9375rem;
+  color: var(--primary-dark-grey);
+}
+
+.timeline-content h3 {
+  margin-top: 0.3125rem;
+  color: var(--primary-hover-purple);
+  font-weight: 900;
+}
+
+@media (max-width: 768px) {
+  .experience .container {
+    padding-left: 0;
+  }
+  .experience-wrapper::before {
+    left: 0.5rem;
+    margin-bottom: 1.875rem;
+  }
+  .timeline-block-right {
+    float: none;
+    width: 100%;
+  }
+  .timeline-block-left {
+    float: none;
+    direction: ltr;
+    width: 100%;
+  }
 }
