--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,13 @@
 :root {
   --primary-white: #fff;
   --primary-dark: rgb(52, 58, 64);
+  --primary-green: rgb(50, 207, 50);
   --primary-purple: rebeccapurple;
   --primary-hover-purple: #9650ac;
   --primary-light-grey: #f4f4f4;
   --primary-grey: lightslategrey;
   --primary-dark-grey: #666666;
+  --primary-black: #000;
 }
 nav {
   z-index: 2;
@@ -233,6 +235,7 @@ nav ul li {
   padding: 0.625rem;
   margin-bottom: 1.875rem;
   background: var(--primary-white);
+  transition: 0.3s ease-in-out;
 }
 
 .services .box:hover {
@@ -256,7 +259,7 @@ nav ul li {
 
 /* ------------------------EXPERIENCE-----------*/
 
-.experience{
+.experience {
   padding: 0.7rem;
 }
 
@@ -336,5 +339,98 @@ nav ul li {
     float: none;
     direction: ltr;
     width: 100%;
+  }
+}
+
+/* ------------------------PORTFOLIO-----------*/
+.portfolio-wrapper {
+  background: var(--primary-light-grey);
+  padding: 3rem 0;
+}
+.portfolio-wrapper h1 {
+  color: var(--primary-purple);
+}
+
+.portfolio-image {
+  width: 15rem;
+  border: 1px solid var(--primary-purple);
+  padding: 0 0.5rem;
+}
+
+.portfolio-image-box {
+  position: relative;
+  margin: 1rem;
+}
+/* ---------------------OVERFLOW BOX-----------*/
+.overflow {
+  position: absolute;
+  opacity: 0;
+  background: var(--primary-black);
+  width: 15rem;
+  height: 5.5rem;
+  top: 0;
+  border: 1px solid var(--primary-green);
+  cursor: pointer;
+}
+
+.portfolio-image-box:hover .overflow {
+  opacity: 60%;
+  transition: 0.3s ease-in-out;
+}
+
+.portfolio-icon {
+  position: absolute;
+  opacity: 0;
+  margin-left: -8rem;
+  margin-top: 2.75rem;
+  color: var(--primary-green);
+  font-size: 1.5rem;
+}
+
+.portfolio-image-box:hover .portfolio-icon {
+  opacity: 70%;
+  transition: .3s ease-in-out;
+  cursor: pointer;
+}
+
+/*---------------------POPUPBOX---------------*/
+
+.portfolio-image-popup-box {
+  width: 45rem;
+  padding: 0 0.5rem;
+}
+
+.hyper-link {
+  cursor: pointer;
+  color: var(--primary-purple)
+}
+.hyper-link:hover {
+  cursor: pointer;
+  color: var(--primary-green);
+  text-decoration: none;
+}
+
+
+/*---------------------MEDIA---------------*/
+
+@media(max-width: 768px){
+  .portfolio-image-popup-box{
+    width: 100%;
+  }
+}
+@media(max-height: 570px){
+  .popupbox-wrapper {
+    height: 100% !important;
+  }
+  .portfolio-image-popup-box{
+    width: 50%;
+  }
+}
+@media(max-height: 280px){
+  .popupbox-wrapper {
+    height: 90%;
+  }
+  .portfolio-image-popup-box{
+    width: 30%;
   }
 }
