--- a/src/App.css
+++ b/src/App.css
@@ -608,3 +608,26 @@ textarea.form-control {
   font-weight: 900;
   color: orchid;
 }
+
+
+/* ----------- FOOTER --------*/
+.footer {
+  background: var(--primary-black);
+  color: var(--primary-dark-grey);
+  padding: 3rem;
+}
+
+.footer a {
+  text-decoration: none;
+  color: var(--primary-dark-grey);
+}
+
+.footer a:hover {
+  text-decoration: none;
+  color: var(--primary-purple);
+  cursor: pointer;
+}
+
+.footer p {
+  margin-bottom: 0;
+}
